--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   http: ^0.13.5
+  flutter_bloc: ^8.1.2
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
