--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.7+1
   brasil_fields: ^1.11.0
   font_awesome_flutter: ^10.4.0
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
