--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   shared_preferences: ^2.1.0
   connectivity_plus: ^4.0.1
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
