--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/image/logo.png
     - assets/image/banner-home.png
     - assets/image/image_default.jpg
+    - assets/image/meme.webp
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
